--- a/lab8_1/index.html
+++ b/lab8_1/index.html
@@ -1,4 +1,147 @@
 <!DOCTYPE html>
 <body>
     <canvas id="cns" width="800px" height="600px"></canvas>
+    <script>
+        const canvas = document.getElementById("cns");
+        const ctx = canvas.getContext("2d");
+
+        class Kamien {
+            constructor(x, y, player) {
+                this.x = x;
+                this.y = y;
+                this.player = -1;
+                this.sasiedzi = [];
+            }
+
+            sprawdzCzyMoznaZbic() {
+                if(this.player == -1)
+                    return false;
+                var enemy = this.player == 0 ? 1 : 0;
+                var k = 0;
+                for (var i = this.sasiedzi.length; i--;) {
+                    const kamien = this.sasiedzi[i];
+                    if(kamien.player == enemy)
+                        k++;
+                }
+
+                return k == this.sasiedzi.length ? true : false;
+            }
+
+            rysuj() {
+                if(this.player == 0) {
+                    ctx.beginPath();
+                    ctx.arc(this.x, this.y, 20, 0, 2 * Math.PI);
+                    ctx.fillStyle = `rgb(0, 0, 0)`;
+                    ctx.fill();
+                } else if (this.player == 1) {
+                    ctx.beginPath();
+                    ctx.arc(this.x, this.y, 20, 0, 2 * Math.PI);
+                    ctx.fillStyle = `rgb(255, 255, 255)`;
+                    ctx.stroke();
+                    ctx.fill();
+                    ctx.closePath();
+                }
+            }
+        }
+
+        class Mapa {
+            constructor() {
+                this.do_postawienia = [10, 10];
+                this.aktualny_gracz = 0;
+                this.koniec = false;
+                this.bicie = false;
+                this.kamienie = [];
+                this.lines = 9;
+                this.spacing = 50;
+                this.left_margin = (canvas.width - this.lines * this.spacing) / 2;
+                this.up_margin = (canvas.height - this.lines * this.spacing) / 2;
+                for(var i = 0; i < this.lines; i++) {
+                    for(var j = 0; j < this.lines; j++) {
+                        this.kamienie.push(new Kamien(this.left_margin + i * 50, this.up_margin + j * 50, -1))
+                    }
+                }
+                for(var i = 0; i < this.lines; i++) {
+                    for(var j = 0; j < this.lines; j++) {
+                        const index = i * this.lines + j;
+                        const kamien = this.kamienie[index];
+                        if(i == 0) {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + 1]);
+                        } else if (i == this.lines - 1) {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines - 1]);
+                        } else {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + 1]);
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines - 1]);
+                        }
+
+                        if(j == 0) {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + j + 1]);
+                        } else if(j == this.lines - 1) {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + j - 1]);
+                        } else {
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + j + 1]);
+                            kamien.sasiedzi.push(this.kamienie[i * this.lines + j - 1]);
+                        }
+                    }
+                }
+            }
+
+            sprawdzCzyMoznaZbic() {
+                for (var i = this.kamienie.length; i--;) {
+                    const kamien = this.kamienie[i];
+                    if(kamien.sprawdzCzyMoznaZbic())
+                        return true;
+                }
+                return false;
+            }
+
+            ruch(event) {
+                if(!this.koniec) {
+                    const rect = canvas.getBoundingClientRect()
+                    const x = event.clientX - rect.left
+                    const y = event.clientY - rect.top
+                    for (var i = this.kamienie.length; i--;) {
+                        const kamien = this.kamienie[i];
+                        if(x >= kamien.x - 10 && x <= kamien.x + 10 && y >= kamien.y - 10 && y <= kamien.y + 10 && kamien.player == -1) {
+                            kamien.player = this.aktualny_gracz;
+                            this.do_postawienia[this.aktualny_gracz] -= 1;
+                            if(this.aktualny_gracz == 0) {
+                                this.aktualny_gracz = 1;
+                            } else {
+                                this.aktualny_gracz = 0;
+                            }
+                            break;
+                        }
+                    }
+                    if(this.do_postawienia[0] == 0 && this.do_postawienia[1] == 0) {
+                        this.koniec = true;
+                    }
+                }
+            }
+
+            rysuj() {
+                for(var i = 0; i < this.lines; i++) {
+                    ctx.moveTo(this.left_margin + i * 50, this.up_margin);
+                    ctx.lineTo(this.left_margin + i * 50, canvas.height - this.up_margin - this.spacing);
+                    ctx.stroke();
+                    ctx.moveTo(this.left_margin, this.up_margin + i * 50);
+                    ctx.lineTo(canvas.width - this.left_margin - this.spacing, this.up_margin + i * 50);
+                    ctx.stroke();
+                }
+                this.kamienie.forEach(kamien => kamien.rysuj());
+            }
+
+        }
+
+        
+        mapa = new Mapa();
+        canvas.addEventListener('mousedown', (e) => {
+            mapa.ruch(e);
+        })
+
+        function animate() {
+            mapa.rysuj();
+            window.requestAnimationFrame(animate);
+        }
+        window.requestAnimationFrame(animate);
+    </script>
 </body>
