--- a/lab8_1/index.html
+++ b/lab8_1/index.html
@@ -50,6 +50,7 @@
                 this.aktualny_gracz = 0;
                 this.koniec = false;
                 this.bicie = false;
+                this.kamien_do_zbicia = null;
                 this.kamienie = [];
                 this.lines = 9;
                 this.spacing = 50;
@@ -85,34 +86,63 @@
                 }
             }
 
-            sprawdzCzyMoznaZbic() {
+            sprawdzCzyMoznaZbic(gracz) {
                 for (var i = this.kamienie.length; i--;) {
                     const kamien = this.kamienie[i];
-                    if(kamien.sprawdzCzyMoznaZbic())
-                        return true;
+                    if(kamien.player == gracz && kamien.sprawdzCzyMoznaZbic())
+                        return [true, kamien];
                 }
-                return false;
+                return [false, null];
+            }
+
+            policzKamienieGraczy() {
+                ret = [0, 0];
+                for (var i = this.kamienie.length; i--;) {
+                    const kamien = this.kamienie[i];
+                    if(kamien.player == 0)
+                        ret[0] += 1;
+                    else if(kamien.player == 1) 
+                        ret[1] += 1;
+                    else
+                        continue;    
+                }
+                return ret;
             }
 
             ruch(event) {
                 if(!this.koniec) {
-                    const rect = canvas.getBoundingClientRect()
-                    const x = event.clientX - rect.left
-                    const y = event.clientY - rect.top
-                    for (var i = this.kamienie.length; i--;) {
-                        const kamien = this.kamienie[i];
-                        if(x >= kamien.x - 10 && x <= kamien.x + 10 && y >= kamien.y - 10 && y <= kamien.y + 10 && kamien.player == -1) {
-                            kamien.player = this.aktualny_gracz;
-                            this.do_postawienia[this.aktualny_gracz] -= 1;
-                            if(this.aktualny_gracz == 0) {
-                                this.aktualny_gracz = 1;
-                            } else {
-                                this.aktualny_gracz = 0;
+                    const rect = canvas.getBoundingClientRect();
+                    const x = event.clientX - rect.left;
+                    const y = event.clientY - rect.top;
+                    if(this.bicie == false) {
+                        for (var i = this.kamienie.length; i--;) {
+                            const kamien = this.kamienie[i];
+                            if(x >= kamien.x - 10 && x <= kamien.x + 10 && y >= kamien.y - 10 && y <= kamien.y + 10) {
+                                if(this.bicie == false) {
+                                    if(kamien.player == -1) {
+                                        kamien.player = this.aktualny_gracz;
+                                        this.do_postawienia[this.aktualny_gracz] -= 1;
+                                        const ret = this.sprawdzCzyMoznaZbic(this.aktualny_gracz == 1 ? 0 : 1);
+                                        console.log(ret);
+                                        if(ret[0] == true) {
+                                            this.bicie = true;
+                                            this.kamien_do_zbicia = ret[1];
+                                            break;
+                                        }
+                                        if(this.aktualny_gracz == 0) {
+                                            this.aktualny_gracz = 1;
+                                        } else {
+                                            this.aktualny_gracz = 0;
+                                        }
+                                        break;
+                                    }
+                                }
                             }
-                            break;
                         }
+                    } else {
+                        
                     }
-                    if(this.do_postawienia[0] == 0 && this.do_postawienia[1] == 0) {
+                    if(this.do_postawienia[0] == 0 && this.do_postawienia[1] == 0 && this.bicie == false) {
                         this.koniec = true;
                     }
                 }
